--- a/lite/examples/style_transfer/android/app/build.gradle
+++ b/lite/examples/style_transfer/android/app/build.gradle
@@ -72,10 +72,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:1.0.0-alpha09"
+
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_version}"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${lifecycle_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.2.0'
     kapt "androidx.lifecycle:lifecycle-compiler:${lifecycle_version}"
